--- a/SongsForWorship/SongsForWorship/Views/EnableAppleMusicTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/EnableAppleMusicTVCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EnableAppleMusicTVCell" id="8fq-SZ-3mh" customClass="EnableAppleMusicTVCell" customModule="SongsForWorship" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="EnableAppleMusicTVCell" id="8fq-SZ-3mh" customClass="EnableAppleMusicTVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8fq-SZ-3mh" id="dKS-Rn-uUP">
