--- a/SongsForWorship/SongsForWorship/Views/EnableMusicLibraryTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/EnableMusicLibraryTVCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EnableMusicLibraryTVCell" id="KGk-i7-Jjw" customClass="EnableMusicLibraryTVCell" customModule="SongsForWorship" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="EnableMusicLibraryTVCell" id="KGk-i7-Jjw" customClass="EnableMusicLibraryTVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -28,11 +28,11 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="FLN-TK-Imd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="7kn-Qy-Xdt"/>
                     <constraint firstItem="MMb-OK-aVu" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="8Fu-ZD-B86"/>
                     <constraint firstItem="MMb-OK-aVu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="KPy-GQ-Okb"/>
                     <constraint firstItem="FLN-TK-Imd" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="VzP-NP-HBC"/>
                     <constraint firstItem="FLN-TK-Imd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pWa-vT-MLN"/>
-                    <constraint firstItem="FLN-TK-Imd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="u74-Lc-tKk"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FLN-TK-Imd" secondAttribute="bottom" constant="10" id="xa3-ew-qXd"/>
                 </constraints>
             </tableViewCellContentView>
